--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body class="overflow-hidden">
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=%VITE_GTAG%"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=%VITE_GTAG%"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', '%VITE_GTAG%');
-  </script>
+  </script> -->
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
